test/integration/syntax/missing_parens.pal
{4}
program test(intput, output);
begin
	a := (a ;				// error

	foobar(foo, (bar + zap));
end.
